feat: add dotenv support and

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "google-genai>=1.59.0",
     "pydantic>=2.12.5",
     "pyside6>=6.10.1",
+    "python-dotenv>=1.2.1",
 ]
 
 [project.optional-dependencies]
